# easygrad

./: .gitignore  README.md  pyproject.toml  zensical.toml
docs/: conclusion.md  index.md  train-mlp.md
docs/javascripts/: mathjax.js
docs/primer/: complex-step.md  numerical.md  symbolic.md
docs/scalar/: forward-dual.md  reverse-tape.md
docs/vector/: forward.md  reverse.md
scripts/: make_figures.py
src/easygrad/: __init__.py  dual.py  forward.py  numeric.py  reverse.py  scalar_reverse.py  symbolic.py  train.py
tests/: README.md  conftest.py  test_consistency.py  test_dual.py  test_forward.py  test_numeric.py  test_reverse.py  test_scalar_reverse.py  test_symbolic.py  test_train.py
