[project]
name = "easygrad"
version = "0.1.0"
description = "Exercise-style repo for implementing an AD engine"
readme = "README.md"
authors = [
    { name = "Samuel Vaiter", email = "samuel.vaiter@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "sympy>=1.14.0",
    "zensical>=0.0.43",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
